[gd_scene load_steps=7 format=3 uid="uid://chi1m41kmmk4j"]

[ext_resource type="Script" uid="uid://ddwmj6ylpifft" path="res://track/track_creator.gd" id="1_o0jg6"]
[ext_resource type="Script" uid="uid://dyi663rgn5n4j" path="res://track/track_data.gd" id="2_x4txj"]
[ext_resource type="Script" uid="uid://btyru6q0fevmb" path="res://track/track_segment_data.gd" id="3_lqlpf"]
[ext_resource type="Script" uid="uid://c1sydldj117cq" path="res://track/track_api.gd" id="4_x4txj"]

[sub_resource type="Resource" id="Resource_1e7eu"]
script = ExtResource("3_lqlpf")
length = 500.0
curvature = 0.0
l_wall_dist = 30.0
l_wall_curv = 0.0
r_wall_dist = 30.0
r_wall_curv = 0.0
metadata/_custom_type_script = "uid://btyru6q0fevmb"

[sub_resource type="Resource" id="Resource_w5abi"]
script = ExtResource("2_x4txj")
track_id = "teste_1"
name = "Teste 1"
segments = Array[ExtResource("3_lqlpf")]([SubResource("Resource_1e7eu")])
metadata/_custom_type_script = "uid://dyi663rgn5n4j"

[node name="TrackCreator" type="Node2D"]
script = ExtResource("1_o0jg6")
track_id = "pista_teste"
track = SubResource("Resource_w5abi")

[node name="Track" type="Node2D" parent="."]

[node name="Core" type="Line2D" parent="Track"]
points = PackedVector2Array(0, 0, 2.91827, 0, 5.81384, 0, 8.68687, 0, 11.5376, 0, 14.3661, 0, 17.1726, 0, 19.9573, 0, 22.7203, 0, 25.4619, 0, 28.1823, 0, 30.8815, 0, 33.5598, 0, 36.2174, 0, 38.8544, 0, 41.471, 0, 44.0674, 0, 46.6438, 0, 49.2003, 0, 51.7372, 0, 54.2545, 0, 59.2315, 0, 64.1327, 0, 68.9595, 0, 73.7133, 0, 78.3956, 0, 83.0078, 0, 87.5513, 0, 92.0277, 0, 96.4382, 0, 100.784, 0, 105.067, 0, 109.289, 0, 113.451, 0, 117.554, 0, 121.599, 0, 125.589, 0, 129.525, 0, 133.408, 0, 137.239, 0, 141.02, 0, 144.752, 0, 148.438, 0, 152.077, 0, 155.672, 0, 159.224, 0, 162.735, 0, 166.206, 0, 169.638, 0, 173.033, 0, 176.392, 0, 179.716, 0, 183.008, 0, 186.269, 0, 189.499, 0, 192.701, 0, 195.875, 0, 199.024, 0, 202.148, 0, 205.25, 0, 208.33, 0, 211.39, 0, 214.432, 0, 217.456, 0, 220.465, 0, 223.459, 0, 226.44, 0, 229.41, 0, 232.37, 0, 235.322, 0, 238.266, 0, 241.204, 0, 244.139, 0, 247.07, 0, 250, 0, 252.93, 0, 255.861, 0, 258.796, 0, 261.734, 0, 264.678, 0, 267.63, 0, 270.59, 0, 273.56, 0, 276.541, 0, 279.535, 0, 282.544, 0, 285.568, 0, 288.61, 0, 291.67, 0, 294.75, 0, 297.852, 0, 300.976, 0, 304.125, 0, 307.299, 0, 310.501, 0, 313.731, 0, 316.992, 0, 320.284, 0, 323.608, 0, 326.967, 0, 330.362, 0, 333.794, 0, 337.265, 0, 340.776, 0, 344.328, 0, 347.923, 0, 351.563, 0, 355.248, 0, 358.98, 0, 362.761, 0, 366.592, 0, 370.475, 0, 374.411, 0, 378.401, 0, 382.446, 0, 386.549, 0, 390.711, 0, 394.932, 0, 399.216, 0, 403.562, 0, 407.972, 0, 412.449, 0, 416.992, 0, 421.604, 0, 426.287, 0, 431.041, 0, 435.867, 0, 440.768, 0, 445.745, 0, 448.263, 0, 450.8, 0, 453.356, 0, 455.933, 0, 458.529, 0, 461.146, 0, 463.783, 0, 466.44, 0, 469.118, 0, 471.818, 0, 474.538, 0, 477.28, 0, 480.043, 0, 482.827, 0, 485.634, 0, 488.462, 0, 491.313, 0, 494.186, 0, 497.082, 0, 500, 0)
width = 2.0
default_color = Color(1, 1, 0, 1)

[node name="LeftWall" type="Line2D" parent="Track"]
points = PackedVector2Array(0, -30, 2.86865, -30, 6.3858, -30, 11.2305, -30, 14.1363, -30, 17.3569, -30, 20.8864, -30, 24.7192, -30, 28.8496, -30, 33.2718, -30, 37.9801, -30, 42.9688, -30, 45.5664, -30, 48.2321, -30, 50.965, -30, 53.7643, -30, 56.6295, -30, 59.5598, -30, 62.5545, -30, 65.6128, -30, 68.7341, -30, 71.9175, -30, 75.1625, -30, 78.4683, -30, 81.8342, -30, 85.2594, -30, 88.7433, -30, 92.2852, -30, 95.8842, -30, 99.5398, -30, 103.251, -30, 107.018, -30, 110.838, -30, 114.713, -30, 118.64, -30, 122.62, -30, 126.651, -30, 130.733, -30, 134.864, -30, 139.046, -30, 143.276, -30, 147.553, -30, 151.878, -30, 156.25, -30, 160.667, -30, 165.13, -30, 169.636, -30, 174.187, -30, 178.78, -30, 183.415, -30, 188.092, -30, 192.81, -30, 197.568, -30, 202.365, -30, 207.201, -30, 212.074, -30, 216.985, -30, 221.932, -30, 226.915, -30, 229.42, -30, 231.934, -30, 234.456, -30, 236.986, -30, 239.525, -30, 242.072, -30, 244.628, -30, 247.191, -30, 249.763, -30, 252.342, -30, 254.93, -30, 257.525, -30, 260.128, -30, 262.738, -30, 265.356, -30, 267.982, -30, 270.614, -30, 273.254, -30, 275.902, -30, 278.556, -30, 281.217, -30, 283.885, -30, 286.56, -30, 289.241, -30, 291.93, -30, 294.624, -30, 297.325, -30, 300.033, -30, 302.747, -30, 305.467, -30, 308.193, -30, 310.925, -30, 313.663, -30, 316.406, -30, 319.156, -30, 321.911, -30, 324.671, -30, 327.437, -30, 330.209, -30, 332.986, -30, 335.767, -30, 338.554, -30, 341.346, -30, 344.143, -30, 346.945, -30, 349.751, -30, 352.563, -30, 355.378, -30, 358.198, -30, 361.023, -30, 363.852, -30, 366.685, -30, 369.522, -30, 372.363, -30, 375.208, -30, 378.057, -30, 380.91, -30, 383.766, -30, 386.626, -30, 389.49, -30, 392.356, -30, 395.227, -30, 398.1, -30, 400.976, -30, 403.856, -30, 406.738, -30, 409.624, -30, 412.512, -30, 415.402, -30, 418.296, -30, 421.192, -30, 424.09, -30, 426.991, -30, 429.893, -30, 432.798, -30, 435.706, -30, 438.615, -30, 441.525, -30, 444.438, -30, 447.353, -30, 450.269, -30, 453.186, -30, 456.105, -30, 459.025, -30, 461.947, -30, 464.869, -30, 467.793, -30, 470.718, -30, 473.644, -30, 476.57, -30, 479.497, -30, 482.425, -30, 485.353, -30, 488.282, -30, 491.211, -30, 494.141, -30, 497.07, -30, 500, -30)
width = 5.0

[node name="RightWall" type="Line2D" parent="Track"]
points = PackedVector2Array(0, 30, 2.86865, 30, 6.3858, 30, 11.2305, 30, 14.1363, 30, 17.3569, 30, 20.8864, 30, 24.7192, 30, 28.8496, 30, 33.2718, 30, 37.9801, 30, 42.9688, 30, 45.5664, 30, 48.2321, 30, 50.965, 30, 53.7643, 30, 56.6295, 30, 59.5598, 30, 62.5545, 30, 65.6128, 30, 68.7341, 30, 71.9175, 30, 75.1625, 30, 78.4683, 30, 81.8342, 30, 85.2594, 30, 88.7433, 30, 92.2852, 30, 95.8842, 30, 99.5398, 30, 103.251, 30, 107.018, 30, 110.838, 30, 114.713, 30, 118.64, 30, 122.62, 30, 126.651, 30, 130.733, 30, 134.864, 30, 139.046, 30, 143.276, 30, 147.553, 30, 151.878, 30, 156.25, 30, 160.667, 30, 165.13, 30, 169.636, 30, 174.187, 30, 178.78, 30, 183.415, 30, 188.092, 30, 192.81, 30, 197.568, 30, 202.365, 30, 207.201, 30, 212.074, 30, 216.985, 30, 221.932, 30, 226.915, 30, 229.42, 30, 231.934, 30, 234.456, 30, 236.986, 30, 239.525, 30, 242.072, 30, 244.628, 30, 247.191, 30, 249.763, 30, 252.342, 30, 254.93, 30, 257.525, 30, 260.128, 30, 262.738, 30, 265.356, 30, 267.982, 30, 270.614, 30, 273.254, 30, 275.902, 30, 278.556, 30, 281.217, 30, 283.885, 30, 286.56, 30, 289.241, 30, 291.93, 30, 294.624, 30, 297.325, 30, 300.033, 30, 302.747, 30, 305.467, 30, 308.193, 30, 310.925, 30, 313.663, 30, 316.406, 30, 319.156, 30, 321.911, 30, 324.671, 30, 327.437, 30, 330.209, 30, 332.986, 30, 335.767, 30, 338.554, 30, 341.346, 30, 344.143, 30, 346.945, 30, 349.751, 30, 352.563, 30, 355.378, 30, 358.198, 30, 361.023, 30, 363.852, 30, 366.685, 30, 369.522, 30, 372.363, 30, 375.208, 30, 378.057, 30, 380.91, 30, 383.766, 30, 386.626, 30, 389.49, 30, 392.356, 30, 395.227, 30, 398.1, 30, 400.976, 30, 403.856, 30, 406.738, 30, 409.624, 30, 412.512, 30, 415.402, 30, 418.296, 30, 421.192, 30, 424.09, 30, 426.991, 30, 429.893, 30, 432.798, 30, 435.706, 30, 438.615, 30, 441.525, 30, 444.438, 30, 447.353, 30, 450.269, 30, 453.186, 30, 456.105, 30, 459.025, 30, 461.947, 30, 464.869, 30, 467.793, 30, 470.718, 30, 473.644, 30, 476.57, 30, 479.497, 30, 482.425, 30, 485.353, 30, 488.282, 30, 491.211, 30, 494.141, 30, 497.07, 30, 500, 30)
width = 5.0

[node name="TrackAPI" type="HTTPRequest" parent="."]
use_threads = true
script = ExtResource("4_x4txj")
